7357
sorry, should have elaborated
here is testcase https://github.com/OlegYch/scala-testcases/tree/master/SI-5565
and here is scalac output
{code}
D:\test\>javac pack2\*.java
D:\test\>d:\Distrib\Coding\Java\scala\scala-2.9.1.final\bin\scalac.bat  pack2\*.java *.scala
test.scala:5: error: variable i in object base cannot be accessed in object pack2.base
 Access to protected variable i not permitted because
 enclosing class object test in package pack1 is not a subclass of
 object base in package pack2 where target is defined
  println(base.i)
               ^
one error found
{code}

with nightly build:
{code}
D:\test>d:\Distrib\Coding\Java\scala\scala-2.10.0-M2-0118-gf1c39dd981-2012-03-11\bin\scalac.bat pack2\*.java *.scala

D:\test>javac pack2\*.java

D:\test>d:\Distrib\Coding\Java\scala\scala-2.10.0-M2-0118-gf1c39dd981-2012-03-11\bin\scala.bat pack1.test
java.lang.IllegalAccessError: tried to access field pack2.base.i from class pack1.test$delayedInit$body
        at pack1.test$delayedInit$body.apply(test.scala:5)
        at scala.Function0$class.apply$mcV$sp(Function0.scala:40)
        at scala.runtime.AbstractFunction0.apply$mcV$sp(AbstractFunction0.scala:12)
        at scala.App$$anonfun$main$1.apply(App.scala:61)
        at scala.App$$anonfun$main$1.apply(App.scala:61)
        at scala.collection.LinearSeqOptimized$class.foreach(LinearSeqOptimized.scala:59)
        at scala.collection.immutable.List.foreach(List.scala:77)
        at scala.collection.generic.TraversableForwarder$class.foreach(TraversableForwarder.scala:31)
        at scala.App$class.main(App.scala:61)
        at pack1.test$.main(test.scala:4)
        at pack1.test.main(test.scala)
        at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
        at sun.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:39)
        at sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:25)
        at java.lang.reflect.Method.invoke(Method.java:597)
        at scala.tools.nsc.util.ScalaClassLoader$$anonfun$run$1.apply(ScalaClassLoader.scala:90)
        at scala.tools.nsc.util.ScalaClassLoader$class.asContext(ScalaClassLoader.scala:38)
        at scala.tools.nsc.util.ScalaClassLoader$URLClassLoader.asContext(ScalaClassLoader.scala:159)
        at scala.tools.nsc.util.ScalaClassLoader$class.run(ScalaClassLoader.scala:90)
        at scala.tools.nsc.util.ScalaClassLoader$URLClassLoader.run(ScalaClassLoader.scala:159)
        at scala.tools.nsc.CommonRunner$class.run(ObjectRunner.scala:28)
        at scala.tools.nsc.ObjectRunner$.run(ObjectRunner.scala:45)
        at scala.tools.nsc.CommonRunner$class.runAndCatch(ObjectRunner.scala:35)
        at scala.tools.nsc.ObjectRunner$.runAndCatch(ObjectRunner.scala:45)
        at scala.tools.nsc.MainGenericRunner.runTarget$1(MainGenericRunner.scala:70)
        at scala.tools.nsc.MainGenericRunner.process(MainGenericRunner.scala:92)
        at scala.tools.nsc.MainGenericRunner$.main(MainGenericRunner.scala:101)
        at scala.tools.nsc.MainGenericRunner.main(MainGenericRunner.scala)
{code}
